--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.01.Theory.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.01.Theory.yml
@@ -11,29 +11,35 @@ defaults:
   - CET-07.01-IntegrationByParts
   markdownTabLength: 2
 notes:
-- id: 1576618085579
+- id: 1577307683259
   fields:
     Front: |
       CET-07.01-01 Theory:
+      ##### integration by parts
       Give the **formula for integration by parts.**
     Back: |
       $$$\int f(x) g^{\prime}(x) d x=f(x) g(x)-\int g(x) f^{\prime}(x) d x$$$
     Annotations: ''
   tags: []
-- id: 1576618467529
+- id: 1577307683584
   fields:
     Front: |
       CET-07.01-02 Theory:
+      ##### integration by parts
       Give the **formula for integration by parts** in terms of differentials.
-    Back: |
-      Let $u=f(x)$ and $v=g(x) .$ Then the differentials are $d u=f^{\prime}(x) d x$ and $d v=g^{\prime}(x) d x,$ so, by the Substitution Rule, the formula for integration by parts becomes
+    Back: >
+      Let $u=f(x)$ and $v=g(x) .$ Then the differentials are $d u=f^{\prime}(x) d
+      x$ and $d v=g^{\prime}(x) d x,$ so, by the Substitution Rule, the formula for
+      integration by parts becomes
+
       $$$\int u d v=u v-\int v d u$$$
     Annotations: ''
   tags: []
-- id: 1576642600858
+- id: 1577307683834
   fields:
     Front: |
       CET-07.01-03 Theory:
+      ##### integration by parts
       What does **LIATE** stand for?
     Back: |
       A mnemonic device which is helpful for selecting $u$ when using integration by parts is the LIATE princedence for $u:$
