Remove 'Editing' tag from CET-07.02.

--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.02.Exercises.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.02.Exercises.yml
@@ -95,5 +95,4 @@ notes:
       $$$
       The symbols $\stackrel{s}{=}$ and $\stackrel{c}{=}$ indicate the use of the substitutions $\{u=\sin x, d u=\cos x d x\}$ and $\{u=\cos x, d u=-\sin x d x\},$ respectively.
     Annotations: ''
-  tags:
-  - Editing
+  tags: []
