Remove 'Editing' tag from CET-07.07.

--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.07.Exercises.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.07.Exercises.yml
@@ -50,5 +50,4 @@ notes:
       (d)
       For any $n,$ we will have $L_{n}<T_{n}<I<M_{n}<R_{n} .$
     Annotations: ''
-  tags:
-  - Editing
+  tags: []
