--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.07.Theory.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.07.Theory.yml
@@ -182,5 +182,4 @@ notes:
       \left|E_{s}\right| \leqslant \frac{K(b-a)^{5}}{180 n^{4}}
       $$$
     Annotations: ''
-  tags:
-  - Editing
+  tags: []
