--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.08.Theory.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/07.08.Theory.yml
@@ -86,5 +86,4 @@ notes:
 
       Although we state this for Type 1 integrals, a similar theorem is true for Type 2 integrals.
     Annotations: ''
-  tags:
-  - Editing
+  tags: []
