Change CET templates to use '¢' instead of '$' as string-template delimiter.

--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Examples.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Examples.yml
@@ -1,5 +1,5 @@
   media:
-  - path: ${file_dir}/images/CET-XX.XX-XX.Xm.1.jpg
+  - path: ¢{file_dir}/images/CET-XX.XX-XX.Xm.1.jpg
       <p align="center">
       ![](CET-XX.XX-XX.Xm.1.jpg)
       </p>
