--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Exercises.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Exercises.yml
@@ -1,5 +1,5 @@
   media:
-  - path: ${file_dir}/images/CET-XX.XX-XX.Xs.1.jpg
+  - path: ¢{file_dir}/images/CET-XX.XX-XX.Xs.1.jpg
       <p align="center">
       ![](CET-XX.XX-XX.Xs.1.jpg)
       </p>
@@ -8,10 +8,7 @@
   fields:
     Front: |
       CET-XX.XX-XX Exercise:
-      $$$$
     Back: |
-      $$$
-      $$$
     Annotations: ''
   tags:
   - Editing
