--- a/requirements.txt
+++ b/requirements.txt
@@ -12,22 +12,27 @@ future==0.16.0
 html2text==2018.1.9
 html5lib==1.0.1
 idna==2.7
+importlib-metadata==1.3.0
 ipykernel==4.8.2
 ipython==6.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.0
 jedi==0.12.1
 Jinja2==2.10
-jsonschema==2.6.0
+json5==0.8.5
+jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+jupyterlab==1.2.4
+jupyterlab-server==1.0.6
 lxml==4.4.2
 Markdown==3.1.1
 MarkupSafe==1.0
 mccabe==0.6.1
 mistune==0.8.3
+more-itertools==8.0.2
 mpmath==1.1.0
 mwclient==0.9.1
 nbconvert==5.3.1
@@ -57,6 +62,7 @@ pypandoc==1.4
 pyrsistent==0.15.6
 python-dateutil==2.7.3
 python-language-server==0.19.0
+python-markdown-math==0.6
 pytz==2019.3
 PyYAML==3.13
 pyzmq==17.1.0
@@ -65,6 +71,8 @@ requests==2.19.1
 requests-oauthlib==1.0.0
 rope==0.11.0
 rtyaml==1.0.0
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
@@ -74,10 +82,11 @@ terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
 traitlets==4.3.2
-urllib3==1.23
+urllib3==1.25.7
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.0
 wikipedia==1.4.0
 wptools==0.4.16
 yapf==0.22.0
+zipp==0.6.0
